src_cuda/fdtd_cuda_api.F90

         type(c_ptr), value :: ctx
         integer(c_int) :: fdtd_cuda_advance_mur
      end function
      function fdtd_cuda_upload_nodal(ctx, jobs, n_jobs, samples, n_samples, skip_e, skip_h, n_skip) &
         bind(C, name="fdtd_cuda_upload_nodal")
         import :: c_ptr, c_int, c_float, fdtd_nodal_job_c
         type(c_ptr), value :: ctx
         type(fdtd_nodal_job_c), intent(in) :: jobs(*)
         integer(c_int), value :: n_jobs, n_samples, n_skip
         real(c_float), intent(in) :: samples(*)
         integer(c_int), intent(in) :: skip_e(*), skip_h(*)
         integer(c_int) :: fdtd_cuda_upload_nodal
      end function
      function fdtd_cuda_nodal_ready(ctx) bind(C, name="fdtd_cuda_nodal_ready")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int) :: fdtd_cuda_nodal_ready
      end function
      function fdtd_cuda_advance_nodal_e(ctx, time, step) bind(C, name="fdtd_cuda_advance_nodal_e")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), value :: time
         integer(c_int), value :: step
         integer(c_int) :: fdtd_cuda_advance_nodal_e
      end function
      function fdtd_cuda_advance_nodal_h(ctx, time, step) bind(C, name="fdtd_cuda_advance_nodal_h")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), value :: time
         integer(c_int), value :: step
         integer(c_int) :: fdtd_cuda_advance_nodal_h
      end function
   end interface

contains

   subroutine fdtd_cuda_create_f(ok)
      logical, intent(out) :: ok
      fdtd_cuda_ctx_c = fdtd_cuda_create()
      ok = (fdtd_cuda_ok(fdtd_cuda_ctx_c) /= 0)
      fdtd_cuda_enabled = ok
   end subroutine

   subroutine fdtd_cuda_destroy_f()
      if (c_associated(fdtd_cuda_ctx_c)) call fdtd_cuda_destroy(fdtd_cuda_ctx_c)
      fdtd_cuda_ctx_c = c_null_ptr
      fdtd_cuda_enabled = .false.
   end subroutine

   logical function fdtd_cuda_ok_f()
      fdtd_cuda_ok_f = fdtd_cuda_enabled .and. (fdtd_cuda_ok(fdtd_cuda_ctx_c) /= 0)
   end function

   integer function fdtd_cuda_alloc_fields_f(ex, ey, ez, hx, hy, hz)
      type(fdtd_dims3_c), intent(in) :: ex, ey, ez, hx, hy, hz
      fdtd_cuda_alloc_fields_f = fdtd_cuda_alloc_fields(fdtd_cuda_ctx_c, ex, ey, ez, hx, hy, hz)
   end function

   integer function fdtd_cuda_alloc_media_f(mex, mey, mez, mhx, mhy, mhz)
      type(fdtd_dims3_c), intent(in) :: mex, mey, mez, mhx, mhy, mhz
      fdtd_cuda_alloc_media_f = fdtd_cuda_alloc_media(fdtd_cuda_ctx_c, mex, mey, mez, mhx, mhy, mhz)
   end function

   integer function fdtd_cuda_alloc_coeffs_f(num_media)
      integer, intent(in) :: num_media
      fdtd_cuda_alloc_coeffs_f = fdtd_cuda_alloc_coeffs(fdtd_cuda_ctx_c, int(num_media, c_int))
   end function

   integer function fdtd_cuda_alloc_metrics_f(n_idxh, n_idyh, n_idzh, n_idxe, n_idye, n_idze)
      integer, intent(in) :: n_idxh, n_idyh, n_idzh, n_idxe, n_idye, n_idze
      fdtd_cuda_alloc_metrics_f = fdtd_cuda_alloc_metrics(fdtd_cuda_ctx_c, &
         int(n_idxh, c_int), int(n_idyh, c_int), int(n_idzh, c_int), &
         int(n_idxe, c_int), int(n_idye, c_int), int(n_idze, c_int))
   end function

   integer function fdtd_cuda_upload_fields_f(Ex, Ey, Ez, Hx, Hy, Hz)
      real(kind=RKIND), intent(in), target :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
      fdtd_cuda_upload_fields_f = fdtd_cuda_upload_fields(fdtd_cuda_ctx_c, Ex, Ey, Ez, Hx, Hy, Hz)
   end function

   integer function fdtd_cuda_download_fields_f(Ex, Ey, Ez, Hx, Hy, Hz)
      real(kind=RKIND), intent(out), target :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
      fdtd_cuda_download_fields_f = fdtd_cuda_download_fields(fdtd_cuda_ctx_c, Ex, Ey, Ez, Hx, Hy, Hz)
   end function

   integer function fdtd_cuda_upload_fields_box_f(Ex, Ey, Ez, Hx, Hy, Hz, &
                                                  bex, bey, bez, bhx, bhy, bhz)
      real(kind=RKIND), intent(in), target :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
      type(fdtd_ibox_c), intent(in) :: bex, bey, bez, bhx, bhy, bhz
      fdtd_cuda_upload_fields_box_f = fdtd_cuda_upload_fields_box(fdtd_cuda_ctx_c, &
         Ex, Ey, Ez, Hx, Hy, Hz, bex, bey, bez, bhx, bhy, bhz)
   end function

   integer function fdtd_cuda_download_fields_box_f(Ex, Ey, Ez, Hx, Hy, Hz, &
                                                     bex, bey, bez, bhx, bhy, bhz)
      real(kind=RKIND), intent(out), target :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
      type(fdtd_ibox_c), intent(in) :: bex, bey, bez, bhx, bhy, bhz
      fdtd_cuda_download_fields_box_f = fdtd_cuda_download_fields_box(fdtd_cuda_ctx_c, &
         Ex, Ey, Ez, Hx, Hy, Hz, bex, bey, bez, bhx, bhy, bhz)
   end function

   integer function fdtd_cuda_upload_media_f(mex, mey, mez, mhx, mhy, mhz)
      integer(kind=2), intent(in), target :: mex(*), mey(*), mez(*), mhx(*), mhy(*), mhz(*)
      fdtd_cuda_upload_media_f = fdtd_cuda_upload_media(fdtd_cuda_ctx_c, mex, mey, mez, mhx, mhy, mhz)
   end function

   integer function fdtd_cuda_upload_coeffs_f(g1, g2, gm1, gm2, num_media)
      real(kind=RKIND), intent(in), target :: g1(*), g2(*), gm1(*), gm2(*)
      integer, intent(in) :: num_media
      fdtd_cuda_upload_coeffs_f = fdtd_cuda_upload_coeffs(fdtd_cuda_ctx_c, g1, g2, gm1, gm2, int(num_media, c_int))
   end function

   integer function fdtd_cuda_upload_metrics_f(Idxh, Idyh, Idzh, Idxe, Idye, Idze)
      real(kind=RKIND), intent(in), target :: Idxh(*), Idyh(*), Idzh(*), Idxe(*), Idye(*), Idze(*)
      fdtd_cuda_upload_metrics_f = fdtd_cuda_upload_metrics(fdtd_cuda_ctx_c, Idxh, Idyh, Idzh, Idxe, Idye, Idze)
   end function

   integer function fdtd_cuda_advance_ex_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_ex_f = fdtd_cuda_advance_ex(fdtd_cuda_ctx_c, sweep)
   end function
   integer function fdtd_cuda_advance_ey_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_ey_f = fdtd_cuda_advance_ey(fdtd_cuda_ctx_c, sweep)
   end function
   integer function fdtd_cuda_advance_ez_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_ez_f = fdtd_cuda_advance_ez(fdtd_cuda_ctx_c, sweep)
   end function
   integer function fdtd_cuda_advance_hx_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_hx_f = fdtd_cuda_advance_hx(fdtd_cuda_ctx_c, sweep)
   end function
   integer function fdtd_cuda_advance_hy_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_hy_f = fdtd_cuda_advance_hy(fdtd_cuda_ctx_c, sweep)
   end function
   integer function fdtd_cuda_advance_hz_f(sweep)
      type(fdtd_ibox_c), intent(in) :: sweep
      fdtd_cuda_advance_hz_f = fdtd_cuda_advance_hz(fdtd_cuda_ctx_c, sweep)
   end function

   integer function fdtd_cuda_alloc_psi_f(slot, n_elem)
      integer, intent(in) :: slot, n_elem
      fdtd_cuda_alloc_psi_f = fdtd_cuda_alloc_psi(fdtd_cuda_ctx_c, int(slot, c_int), int(n_elem, c_int))
   end function
   integer function fdtd_cuda_upload_psi_f(slot, psi, n_elem)
      integer, intent(in) :: slot, n_elem
      real(kind=RKIND), intent(in), target :: psi(*)
      fdtd_cuda_upload_psi_f = fdtd_cuda_upload_psi(fdtd_cuda_ctx_c, int(slot, c_int), psi, int(n_elem, c_int))
   end function
   integer function fdtd_cuda_download_psi_f(slot, psi, n_elem)
      integer, intent(in) :: slot, n_elem
      real(kind=RKIND), intent(out), target :: psi(*)
      fdtd_cuda_download_psi_f = fdtd_cuda_download_psi(fdtd_cuda_ctx_c, int(slot, c_int), psi, int(n_elem, c_int))
   end function
   integer function fdtd_cuda_alloc_cpml_1d_f(which, n, host)
      integer, intent(in) :: which, n
      real(kind=RKIND), intent(in), target :: host(*)
      fdtd_cuda_alloc_cpml_1d_f = fdtd_cuda_alloc_cpml_1d(fdtd_cuda_ctx_c, int(which, c_int), int(n, c_int), host)
   end function
   integer function fdtd_cuda_cpml_apply_f(job)
      type(fdtd_cpml_job_c), intent(in) :: job
      fdtd_cuda_cpml_apply_f = fdtd_cuda_cpml_apply(fdtd_cuda_ctx_c, job)
   end function

   integer function fdtd_cuda_set_point_probes_f(n, comp, i, j, k)
      integer, intent(in) :: n
      integer(c_int), intent(in), target :: comp(*), i(*), j(*), k(*)
      fdtd_cuda_set_point_probes_f = fdtd_cuda_set_point_probes(fdtd_cuda_ctx_c, int(n, c_int), &
         comp, i, j, k)
   end function

   integer function fdtd_cuda_gather_point_probes_f(out)
      real(kind=RKIND), intent(out), target :: out(*)
      fdtd_cuda_gather_point_probes_f = fdtd_cuda_gather_point_probes(fdtd_cuda_ctx_c, out)
   end function

   integer function fdtd_cuda_upload_planewave_phys_f(field, axis, base_abs, n, host)
      integer, intent(in) :: field, axis, base_abs, n
      real(kind=RKIND), intent(in), target :: host(*)
      fdtd_cuda_upload_planewave_phys_f = fdtd_cuda_upload_planewave_phys(fdtd_cuda_ctx_c, &
         int(field, c_int), int(axis, c_int), int(base_abs, c_int), int(n, c_int), host)
   end function

   integer function fdtd_cuda_upload_planewave_f(n_waves, max_modes, max_numus, cluz, &
      num_modes, numus, deltaevol, evol, px, py, pz, d0, fpw, faces_e, n_faces_e, faces_h, n_faces_h)
      integer, intent(in) :: n_waves, max_modes, max_numus, n_faces_e, n_faces_h
      real(kind=RKIND), intent(in) :: cluz
      integer(c_int), intent(in), target :: num_modes(*), numus(*)
      real(kind=RKIND), intent(in), target :: deltaevol(*), evol(*), px(*), py(*), pz(*), d0(*), fpw(*)
      type(fdtd_pw_face_c), intent(in), target :: faces_e(*), faces_h(*)
      fdtd_cuda_upload_planewave_f = fdtd_cuda_upload_planewave(fdtd_cuda_ctx_c, &
         int(n_waves, c_int), int(max_modes, c_int), int(max_numus, c_int), real(cluz, c_float), &
         num_modes, numus, deltaevol, evol, px, py, pz, d0, fpw, &
         faces_e, int(n_faces_e, c_int), faces_h, int(n_faces_h, c_int))
   end function

   logical function fdtd_cuda_planewave_ready_f()
      fdtd_cuda_planewave_ready_f = fdtd_cuda_enabled .and. (fdtd_cuda_planewave_ready(fdtd_cuda_ctx_c) /= 0)
   end function

   integer function fdtd_cuda_advance_planewave_e_f(time, still_out)
      real(kind=RKIND), intent(in) :: time
      logical, intent(out) :: still_out
      integer(c_int) :: still_c
      fdtd_cuda_advance_planewave_e_f = fdtd_cuda_advance_planewave_e(fdtd_cuda_ctx_c, &
         real(time, c_float), still_c)
      still_out = (still_c /= 0)
   end function

   integer function fdtd_cuda_advance_planewave_h_f(time, still_out)
      real(kind=RKIND), intent(in) :: time
      logical, intent(out) :: still_out
      integer(c_int) :: still_c
      fdtd_cuda_advance_planewave_h_f = fdtd_cuda_advance_planewave_h(fdtd_cuda_ctx_c, &
         real(time, c_float), still_c)
      still_out = (still_c /= 0)
   end function

   integer function fdtd_cuda_upload_mur_cab_f(which, n, host)
      integer, intent(in) :: which, n
      real(kind=RKIND), intent(in), target :: host(*)
      fdtd_cuda_upload_mur_cab_f = fdtd_cuda_upload_mur_cab(fdtd_cuda_ctx_c, &
         int(which, c_int), int(n, c_int), host)
   end function

   integer function fdtd_cuda_set_mur_jobs_f(jobs, n_jobs)
      type(fdtd_mur_job_c), intent(in), target :: jobs(*)
      integer, intent(in) :: n_jobs
      fdtd_cuda_set_mur_jobs_f = fdtd_cuda_set_mur_jobs(fdtd_cuda_ctx_c, jobs, int(n_jobs, c_int))
   end function

   integer function fdtd_cuda_upload_mur_past_f(slot, host, n_elem)
      integer, intent(in) :: slot, n_elem
      real(kind=RKIND), intent(in), target :: host(*)
      fdtd_cuda_upload_mur_past_f = fdtd_cuda_upload_mur_past(fdtd_cuda_ctx_c, &
         int(slot, c_int), host, int(n_elem, c_int))
   end function

   logical function fdtd_cuda_mur_ready_f()
      fdtd_cuda_mur_ready_f = fdtd_cuda_enabled .and. (fdtd_cuda_mur_ready(fdtd_cuda_ctx_c) /= 0)
   end function

   integer function fdtd_cuda_advance_mur_f()
      fdtd_cuda_advance_mur_f = fdtd_cuda_advance_mur(fdtd_cuda_ctx_c)
   end function
